--- a/front_angular/src/styles.css
+++ b/front_angular/src/styles.css
@@ -1,81 +1,87 @@
 body, .contenedor {
-    background-color: #000;
-    color: #00ff00;
-    font-family: 'Courier New', monospace;
-  }
+  background-color: #15202b;
+  color: #D1D7E0;
+  font-family: 'Courier New', monospace;
+}
 
-  .contenedor {
-    width: 320px;
-    margin: 5rem auto;
-    padding: 2rem;
-    border: 2px solid #00ff00;
-    border-radius: 10px;
-    box-shadow: 0 0 15px #00ff00;
-    text-align: center;
-  }
-  
-  .title {
-    margin-bottom: 1.5rem;
-    color: #00ff00;
-    text-shadow: 0 0 5px #00ff00;
-  }
-  
-  .login-form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-  
-  label {
-    text-align: left;
-    font-weight: bold;
-  }
-  
-  input {
-    background: #000;
-    color: #00ff00;
-    border: 1px solid #00ff00;
-    padding: 0.5rem;
-    font-family: inherit;
-    border-radius: 5px;
-  }
-  
-  input:focus {
-    outline: none;
-    box-shadow: 0 0 5px #00ff00;
-  }
-  
-  .btn {
-    cursor: pointer;
-    border: 1px solid #00ff00;
-    background: #000;
-    color: #00ff00;
-    padding: 0.5rem;
-    border-radius: 5px;
-    font-family: inherit;
-    transition: all 0.2s;
-  }
-  
-  .btn:hover {
-    background: #00ff00;
-    color: #000;
-  }
-  
-  .btn.grande {
-    margin-top: 1rem;
-    border-color: #00ff00;
-  }
-  
-  .btn.link {
-    background: none;
-    border: none;
-    color: #00ff00;
-    text-decoration: underline;
-  }
-  
-  .separator {
-    margin: 1rem 0;
-    font-size: 0.9rem;
-    opacity: 0.7;
-  }
-  
+.contenedor {
+  width: 320px;
+  margin: 5rem auto;
+  padding: 2rem;
+  border: 2px solid #00ba22;
+  border-radius: 10px;
+  box-shadow: 0 0 15px #00ba22;
+  text-align: center;
+}
+
+.title {
+  margin-bottom: 1.5rem;
+  color: #00ba22;
+  text-shadow: 0 0 5px #00ba22;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+label {
+  text-align: left;
+  font-weight: bold;
+}
+
+input {
+  background: #15202b;
+  color: #D1D7E0;
+  border: 1px solid #D1D7E0;
+  padding: 0.5rem;
+  font-family: inherit;
+  border-radius: 5px;
+}
+
+input:focus {
+  outline: none;
+  border: 1px solid #00ba22;
+  box-shadow: 0 0 5px #00ba22;
+}
+
+.btn {
+  cursor: pointer;
+  border: 1px solid #00ba22;
+  background: #15202b;
+  color: #00ba22;
+  padding: 0.5rem;
+  border-radius: 5px;
+  font-family: inherit;
+  transition: all 0.2s;
+}
+
+.btn:hover {
+  background: #00ba22;
+  color: #D1D7E0;
+}
+
+.btn.grande {
+  margin-top: 1rem;
+  border-color: #00ba22;
+}
+
+.btn.link {
+  background: none;
+  border: none;
+  color: #00ba22;
+  text-decoration: underline;
+}
+
+.btn.link:hover {
+  border: none;
+  color: #D1D7E0;
+  text-decoration: underline;
+}
+
+.separator {
+  margin: 1rem 0;
+  font-size: 0.9rem;
+  opacity: 0.7;
+}
